--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-languages",
   "version": "0.1.0",
   "private": true,
-  "home": "https://c7197-recep.github.io/React-Languages/",
+  "homepage": "https://c7197-recep.github.io/React-Languages/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
